--- a/main/templates/common/footer.html
+++ b/main/templates/common/footer.html
@@ -62,4 +62,30 @@
                 <a href="#modal02">Terms &amp; Conditions</a>
             </div>
         </div>
+
+<!--        <div data-ml-modal="" id="modal01">-->
+<!--            <a href="#" class="modal-overlay"></a>-->
+<!--            <div class="modal-dialog modal-dialog-lg">-->
+<!--                <a href="#" class="modal-close">×</a>-->
+<!--                <h3>개인정보취급방침</h3>-->
+<!--                <div class="modal-content">-->
+<!--                    <div class="terms_area">-->
+
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+
+<!--        <div data-ml-modal="" id="modal02">-->
+<!--            <a href="#" class="modal-overlay"></a>-->
+<!--            <div class="modal-dialog modal-dialog-lg">-->
+<!--                <a href="#" class="modal-close">×</a>-->
+<!--                <h3>이용약관</h3>-->
+<!--                <div class="modal-content">-->
+<!--                    <div class="terms_area">-->
+
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
     </footer>
