--- a/main/templates/payment/order.html
+++ b/main/templates/payment/order.html
@@ -1,95 +1,9 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
 {% load static %}
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>코딩키트 | 머릿속 생각을 쉽게,뚝딱 런코딩</title>
-    <meta name="description" content="" />
-    <meta name="Keywords" content="runcoding" />
-    <meta http-equiv="Copyright" content="" />
-<!--        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
-    <meta name="robots" content="index,follow">
-    <meta name="format-detection" content="telephone=no" />
+{% include "common/header.html" %}
 
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="runcoding">
-    <meta property="og:description" content="runcoding">
-    <meta property="og:image" content="{% static 'resource/img/common/share_img.jpg' %}">
-
-    <!-- favicon -->
-    <link rel="shortcut icon" href="{% static 'resource/img/common/favicon.ico' %}" type="image/x-icon">
-    <link rel="icon" href="{% static 'resource/img/common/favicon.ico' %}" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/font-awesome.min.css' %}">
-
-    <!-- slick css -->
-    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/slick.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/slick-theme.css' %}" />
-
-    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/reset.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/common.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/layout.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'resource/css/order.css' %}" />
-
     <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.1.5.js"></script>
-<!--<script>-->
-<!--var elearning_url       = "https://www.runcoding.co.kr"; var elearning_bbs_url   = "https://www.runcoding.co.kr/bbs"; var elearning_is_member = ""; var elearning_is_admin  = ""; var elearning_is_mobile = "0"; var elearning_bo_table  = ""; var elearning_sca       = ""; var elearning_editor    = ""; var elearning_cookie_domain = ""; </script>-->
 
-    <script src="{% static 'resource/js/vendor/jquery-3.4.1.min.js' %}"></script>
-    <script src="{% static 'resource/js/jquery-migrate-3.0.0.js' %}"></script>
-    <script src="{% static 'resource/js/vendor/modernizr-3.7.1.min.js' %}"></script>
-    <script src="{% static 'resource/js/common.js?ver=20200730001' %}"></script>
-    <script src="{% static 'resource/js/wrest.js?ver=20200730001' %}"></script>
-</head>
-
-<body>
-<header>
-    <div class="header_wrap">
-        <a href="/" class="logo">
-            <img src="{% static 'resource/img/common/logo.png' %}" alt="runcoding">
-        </a>
-        <!-- gnb -->
-        <ul class="menu">
-            <li>
-                <a href="{% static 'lecture/lecture_list.html' %}">코딩키트</a>
-            </li>
-            <li>
-                <a href="{% static 'lounge/coding_lounge.html' %}">코딩라운지</a>
-            </li>
-
-            <li>
-                <a href="{% static 'comunity/coding_comunity.html' %}">커뮤니티</a>
-            </li>
-            <li>
-                <a href="{% static 'lecture/myclass_list.html' %}">나의 강의실</a>
-            </li>
-        </ul>
-        <div class="ab_right">
-            <!-- 비로그인 -->
-            <!--<a href="login.html" class="login">
-                로그인
-            </a>-->
-
-            <!-- 로그인 -->
-            <div class="user_menu">
-                <span class="userImg"><img src="{% static 'resource/img/sub/img_user.png' %}" alt="유저 프로필"></span>
-                <ul class="sub_menu">
-                    <li>
-                        <a href="mypage.html">내 프로필</a>
-                    </li>
-                    <li>
-                        <a href="coupon.html">내 쿠폰</a>
-                    </li>
-                    <li>
-                        <a href="orderList.html">주문내역</a>
-                    </li>
-                    <li>
-                        <a href="/run_logout/">로그아웃</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</header>
 
 <!-- content -->
 <div class="wrap">
@@ -425,117 +339,8 @@
 </div>
 
 
-
-
-
-
-<div class="banner bottom">
-        <img class="bg left01" src="{% static 'resource/img/sub/bg_botBanner_left01.png' %}" alt="bg01">
-        <img class="bg left02" src="{% static 'resource/img/sub/bg_botBanner_left02.png' %}" alt="bg02">
-        <img class="bg right" src="{% static 'resource/img/sub/bg_botBanner_right.png' %}" alt="bg03">
-        <span>
-            CREATIVE CODING KIT로 학습하는 <b>런코딩!</b><br/>
-            지금 시작해보세요.
-        </span>
-        <a href="{% static 'lecture/lecture_list.html' %}" class="btn">시작하기</a>
-    </div>
-
-
-   <footer>
-            <div class="footer">
-                <img class="ci" src="{% static 'resource/img/common/logo_footer.png' %}" alt="런코딩">
-                <div class="footerText">
-                    <div class="information">
-                        <span>INFORMATION</span>
-                        <ul>
-                            <li>
-                                <span>Company</span>
-                                <p>런코딩</p>
-                            </li>
-                            <li>
-                                <span>CPO</span>
-                                <p>김하나</p>
-                            </li>
-                            <li>
-                                <span>Business License</span>
-                                <p>000-000-00000</p>
-                            </li>
-                            <li>
-                                <span>Online Biz</span>
-                                <p>000-000-00000</p>
-                            </li>
-                            <li>
-                                <span>Address</span>
-                                <p>경기도 런코딩 런코딩</p>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="contact">
-                        <span>CONTACT</span>
-                        <ul>
-                            <li>
-                                <span>TEL</span>
-                                <p>070-0000-0000</p>
-                            </li>
-                            <li>
-                                <span>E-Mail</span>
-                                <p>master@runcoding.com</p>
-                            </li>
-                            <li>
-                                <span>Kakao ID</span>
-                                <p>런코딩</p>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="snsArea">
-                        <span>SNS</span>
-                        <div class="snsBtn">
-                            <a><img src="{% static 'resource/img/common/ico_kakaoTalk.png' %}" alt="kakaotalk"></a>
-                            <a><img src="{% static 'resource/img/common/ico_instagram.png' %}" alt="instagram"></a>
-                            <a><img src="{% static 'resource/img/common/ico_naverBlog.png' %}" alt="naverblog"></a>
-                            <a><img src="{% static 'resource/img/common/ico_youtube.png' %}" alt="youtube"></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="link_area">
-                <div class="linkWrap">
-                    <a href="#modal01">Privacy Policy</a>
-                    <a href="#modal02">Terms &amp; Conditions</a>
-                </div>
-            </div>
-        </footer>
-
-
-        <!-- privacy modal -->
-        <div data-ml-modal id="modal01">
-            <a href="#!" class="modal-overlay"></a>
-            <div class="modal-dialog modal-dialog-lg">
-                <a href="#!" class="modal-close">&times;</a>
-                <h3>개인정보취급방침</h3>
-                <div class="modal-content">
-                    <div class="terms_area">
-
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div data-ml-modal id="modal02">
-            <a href="#!" class="modal-overlay"></a>
-            <div class="modal-dialog modal-dialog-lg">
-                <a href="#!" class="modal-close">&times;</a>
-                <h3>이용약관</h3>
-                <div class="modal-content">
-                    <div class="terms_area">
-
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </div>
-
+{% include "common/banner_bottom.html" %}
+{% include "common/footer.html" %}
     <script>
 
         $('.menu-btn').click(function() {
