--- a/main/templates/login/register.html
+++ b/main/templates/login/register.html
@@ -1,41 +1,7 @@
-<!DOCTYPE html>
-<!-- saved from url=(0047)https://www.runcoding.co.kr/_html/join01.html#! -->
-<!--<html xmlns="http://www.w3.org/1999/xhtml" class=" sizes customelements history pointerevents postmessage webgl websockets cssanimations csscolumns csscolumns-width csscolumns-span csscolumns-fill csscolumns-gap csscolumns-rule csscolumns-rulecolor csscolumns-rulestyle csscolumns-rulewidth csscolumns-breakbefore csscolumns-breakafter csscolumns-breakinside flexbox picture srcset webworkers"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">-->
-<html xmlns="http://www.w3.org/1999/xhtml">
 {% load static %}
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>머릿속 생각을 쉽게,뚝딱 런코딩</title>
-    <meta name="description" content="">
-    <meta name="Keywords" content="runcoding">
-    <meta http-equiv="Copyright" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="robots" content="index,follow">
-    <meta name="format-detection" content="telephone=no">
-
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="runcoding">
-    <meta property="og:description" content="runcoding">
-    <meta property="og:image" content="{% static 'resource/img/common/share_img.jpg' %}">
-
-    <!-- favicon -->
-    <link rel="shortcut icon" href="{% static 'resource/img/common/favicon.ico' %}" type="image/x-icon">
-    <link rel="icon" href="{% static 'resource/img/common/favicon.ico' %}" type="image/x-icon">
-
-    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/font-awesome.min.css' %}">
-
-    <!-- slick css -->
-    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/slick.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/slick-theme.css' %}">
-
-    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/reset.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/common.css' %}">
+{% include "common/head.html" %}
     <link rel="stylesheet" type="text/css" href="{% static 'resource/css/login.css' %}">
 
-    <script src="{% static 'resource/js/jquery-3.4.1.min.js' %}"></script>
-    <script src="{% static 'resource/js/modernizr-3.7.1.min.js' %}"></script>
-
-</head>
 <body>
     <div class="wrap login">
         <div class="loginBox join">
@@ -125,254 +91,9 @@
             </div>
     </div>
 
-<!--        <div class="review_area">-->
-<!--                <span>-->
-<!--                    수많은 리뷰가 증명하는-->
-<!--                    <b>런코딩 수강효과!</b>-->
-<!--                </span>-->
-<!--            <div class="sliderArea slick-initialized slick-slider"><button class="slick-prev slick-arrow" aria-label="Previous" type="button" style="">Previous</button><div class="slick-list draggable" style="padding: 0px 50px;"><div class="slick-track" style="opacity: 1; width: 9480px; transform: translate3d(-1580px, 0px, 0px);"><div class="slick-slide slick-cloned" data-slick-index="-2" aria-hidden="true" tabindex="-1" style="width: 790px;"><div><div class="slideCont" style="width: 100%; display: inline-block;">-->
-<!--                    <div class="writerInfo">-->
-<!--                        <img src="./머릿속 생각을 쉽게,뚝딱 런코딩_files/ico_writer.png" alt="작성자">-->
-<!--                        <span>Run</span>-->
-<!--                        <p>데이터 사이언스 입문</p>-->
-<!--                    </div>-->
-<!--                    <div class="text_area">-->
-<!--                        요거 아주 좋음. 짧고 굵은 강의.-->
-<!--                        귀에 쏙쏙 들어옴, 나 이거 이전에 파이썬 강의 하나 듣고, 맘에 들어서 다른 강의 또 듣는 것임.-->
-<!--                        친구한테도 추천해 줌. 데이터 ...-->
-<!--                    </div>-->
-<!--                </div></div></div><div class="slick-slide slick-cloned" data-slick-index="-1" aria-hidden="true" tabindex="-1" style="width: 790px;"><div><div class="slideCont" style="width: 100%; display: inline-block;">-->
-<!--                    <div class="writerInfo">-->
-<!--                        <img src="./머릿속 생각을 쉽게,뚝딱 런코딩_files/ico_writer.png" alt="작성자">-->
-<!--                        <span>Run</span>-->
-<!--                        <p>데이터 사이언스 입문</p>-->
-<!--                    </div>-->
-<!--                    <div class="text_area">-->
-<!--                        요거 아주 좋음. 짧고 굵은 강의.-->
-<!--                        귀에 쏙쏙 들어옴, 나 이거 이전에 파이썬 강의 하나 듣고, 맘에 들어서 다른 강의 또 듣는 것임.-->
-<!--                        친구한테도 추천해 줌. 데이터 ...-->
-<!--                    </div>-->
-<!--                </div></div></div><div class="slick-slide slick-current slick-active slick-center" data-slick-index="0" aria-hidden="false" style="width: 790px;"><div><div class="slideCont" style="width: 100%; display: inline-block;">-->
-<!--                    <div class="writerInfo">-->
-<!--                        <img src="./머릿속 생각을 쉽게,뚝딱 런코딩_files/ico_writer.png" alt="작성자">-->
-<!--                        <span>Run</span>-->
-<!--                        <p>데이터 사이언스 입문</p>-->
-<!--                    </div>-->
-<!--                    <div class="text_area">-->
-<!--                        요거 아주 좋음. 짧고 굵은 강의.-->
-<!--                        귀에 쏙쏙 들어옴, 나 이거 이전에 파이썬 강의 하나 듣고, 맘에 들어서 다른 강의 또 듣는 것임.-->
-<!--                        친구한테도 추천해 줌. 데이터 ...-->
-<!--                    </div>-->
-<!--                </div></div></div><div class="slick-slide" data-slick-index="1" aria-hidden="true" tabindex="-1" style="width: 790px;"><div><div class="slideCont" style="width: 100%; display: inline-block;">-->
-<!--                    <div class="writerInfo">-->
-<!--                        <img src="./머릿속 생각을 쉽게,뚝딱 런코딩_files/ico_writer.png" alt="작성자">-->
-<!--                        <span>Run</span>-->
-<!--                        <p>데이터 사이언스 입문</p>-->
-<!--                    </div>-->
-<!--                    <div class="text_area">-->
-<!--                        요거 아주 좋음. 짧고 굵은 강의.-->
-<!--                        귀에 쏙쏙 들어옴, 나 이거 이전에 파이썬 강의 하나 듣고, 맘에 들어서 다른 강의 또 듣는 것임.-->
-<!--                        친구한테도 추천해 줌. 데이터 ...-->
-<!--                    </div>-->
-<!--                </div></div></div><div class="slick-slide" data-slick-index="2" aria-hidden="true" tabindex="-1" style="width: 790px;"><div><div class="slideCont" style="width: 100%; display: inline-block;">-->
-<!--                    <div class="writerInfo">-->
-<!--                        <img src="./머릿속 생각을 쉽게,뚝딱 런코딩_files/ico_writer.png" alt="작성자">-->
-<!--                        <span>Run</span>-->
-<!--                        <p>데이터 사이언스 입문</p>-->
-<!--                    </div>-->
-<!--                    <div class="text_area">-->
-<!--                        요거 아주 좋음. 짧고 굵은 강의.-->
-<!--                        귀에 쏙쏙 들어옴, 나 이거 이전에 파이썬 강의 하나 듣고, 맘에 들어서 다른 강의 또 듣는 것임.-->
-<!--                        친구한테도 추천해 줌. 데이터 ...-->
-<!--                    </div>-->
-<!--                </div></div></div><div class="slick-slide" data-slick-index="3" aria-hidden="true" tabindex="-1" style="width: 790px;"><div><div class="slideCont" style="width: 100%; display: inline-block;">-->
-<!--                    <div class="writerInfo">-->
-<!--                        <img src="./머릿속 생각을 쉽게,뚝딱 런코딩_files/ico_writer.png" alt="작성자">-->
-<!--                        <span>Run</span>-->
-<!--                        <p>데이터 사이언스 입문</p>-->
-<!--                    </div>-->
-<!--                    <div class="text_area">-->
-<!--                        요거 아주 좋음. 짧고 굵은 강의.-->
-<!--                        귀에 쏙쏙 들어옴, 나 이거 이전에 파이썬 강의 하나 듣고, 맘에 들어서 다른 강의 또 듣는 것임.-->
-<!--                        친구한테도 추천해 줌. 데이터 ...-->
-<!--                    </div>-->
-<!--                </div></div></div><div class="slick-slide" data-slick-index="4" aria-hidden="true" tabindex="-1" style="width: 790px;"><div><div class="slideCont" style="width: 100%; display: inline-block;">-->
-<!--                    <div class="writerInfo">-->
-<!--                        <img src="./머릿속 생각을 쉽게,뚝딱 런코딩_files/ico_writer.png" alt="작성자">-->
-<!--                        <span>Run</span>-->
-<!--                        <p>데이터 사이언스 입문</p>-->
-<!--                    </div>-->
-<!--                    <div class="text_area">-->
-<!--                        요거 아주 좋음. 짧고 굵은 강의.-->
-<!--                        귀에 쏙쏙 들어옴, 나 이거 이전에 파이썬 강의 하나 듣고, 맘에 들어서 다른 강의 또 듣는 것임.-->
-<!--                        친구한테도 추천해 줌. 데이터 ...-->
-<!--                    </div>-->
-<!--                </div></div></div><div class="slick-slide slick-cloned" data-slick-index="5" aria-hidden="true" tabindex="-1" style="width: 790px;"><div><div class="slideCont" style="width: 100%; display: inline-block;">-->
-<!--                    <div class="writerInfo">-->
-<!--                        <img src="./머릿속 생각을 쉽게,뚝딱 런코딩_files/ico_writer.png" alt="작성자">-->
-<!--                        <span>Run</span>-->
-<!--                        <p>데이터 사이언스 입문</p>-->
-<!--                    </div>-->
-<!--                    <div class="text_area">-->
-<!--                        요거 아주 좋음. 짧고 굵은 강의.-->
-<!--                        귀에 쏙쏙 들어옴, 나 이거 이전에 파이썬 강의 하나 듣고, 맘에 들어서 다른 강의 또 듣는 것임.-->
-<!--                        친구한테도 추천해 줌. 데이터 ...-->
-<!--                    </div>-->
-<!--                </div></div></div><div class="slick-slide slick-cloned" data-slick-index="6" aria-hidden="true" tabindex="-1" style="width: 790px;"><div><div class="slideCont" style="width: 100%; display: inline-block;">-->
-<!--                    <div class="writerInfo">-->
-<!--                        <img src="./머릿속 생각을 쉽게,뚝딱 런코딩_files/ico_writer.png" alt="작성자">-->
-<!--                        <span>Run</span>-->
-<!--                        <p>데이터 사이언스 입문</p>-->
-<!--                    </div>-->
-<!--                    <div class="text_area">-->
-<!--                        요거 아주 좋음. 짧고 굵은 강의.-->
-<!--                        귀에 쏙쏙 들어옴, 나 이거 이전에 파이썬 강의 하나 듣고, 맘에 들어서 다른 강의 또 듣는 것임.-->
-<!--                        친구한테도 추천해 줌. 데이터 ...-->
-<!--                    </div>-->
-<!--                </div></div></div><div class="slick-slide slick-cloned" data-slick-index="7" aria-hidden="true" tabindex="-1" style="width: 790px;"><div><div class="slideCont" style="width: 100%; display: inline-block;">-->
-<!--                    <div class="writerInfo">-->
-<!--                        <img src="./머릿속 생각을 쉽게,뚝딱 런코딩_files/ico_writer.png" alt="작성자">-->
-<!--                        <span>Run</span>-->
-<!--                        <p>데이터 사이언스 입문</p>-->
-<!--                    </div>-->
-<!--                    <div class="text_area">-->
-<!--                        요거 아주 좋음. 짧고 굵은 강의.-->
-<!--                        귀에 쏙쏙 들어옴, 나 이거 이전에 파이썬 강의 하나 듣고, 맘에 들어서 다른 강의 또 듣는 것임.-->
-<!--                        친구한테도 추천해 줌. 데이터 ...-->
-<!--                    </div>-->
-<!--                </div></div></div><div class="slick-slide slick-cloned slick-center" data-slick-index="8" aria-hidden="true" tabindex="-1" style="width: 790px;"><div><div class="slideCont" style="width: 100%; display: inline-block;">-->
-<!--                    <div class="writerInfo">-->
-<!--                        <img src="./머릿속 생각을 쉽게,뚝딱 런코딩_files/ico_writer.png" alt="작성자">-->
-<!--                        <span>Run</span>-->
-<!--                        <p>데이터 사이언스 입문</p>-->
-<!--                    </div>-->
-<!--                    <div class="text_area">-->
-<!--                        요거 아주 좋음. 짧고 굵은 강의.-->
-<!--                        귀에 쏙쏙 들어옴, 나 이거 이전에 파이썬 강의 하나 듣고, 맘에 들어서 다른 강의 또 듣는 것임.-->
-<!--                        친구한테도 추천해 줌. 데이터 ...-->
-<!--                    </div>-->
-<!--                </div></div></div><div class="slick-slide slick-cloned" data-slick-index="9" aria-hidden="true" tabindex="-1" style="width: 790px;"><div><div class="slideCont" style="width: 100%; display: inline-block;">-->
-<!--                    <div class="writerInfo">-->
-<!--                        <img src="./머릿속 생각을 쉽게,뚝딱 런코딩_files/ico_writer.png" alt="작성자">-->
-<!--                        <span>Run</span>-->
-<!--                        <p>데이터 사이언스 입문</p>-->
-<!--                    </div>-->
-<!--                    <div class="text_area">-->
-<!--                        요거 아주 좋음. 짧고 굵은 강의.-->
-<!--                        귀에 쏙쏙 들어옴, 나 이거 이전에 파이썬 강의 하나 듣고, 맘에 들어서 다른 강의 또 듣는 것임.-->
-<!--                        친구한테도 추천해 줌. 데이터 ...-->
-<!--                    </div>-->
-<!--                </div></div></div></div></div><button class="slick-next slick-arrow" aria-label="Next" type="button" style="">Next</button></div>-->
-<!--        </div>-->
 
-<!--    </div>-->
-    <footer>
-    <div class="footer">
-        <img class="ci" src="{% static 'resource/img/common/logo_footer.png' %}" alt="런코딩">
-        <div class="footerText">
-            <div class="information">
-                <span>INFORMATION</span>
-                <ul>
-                    <li>
-                        <span>Company</span>
-                        <p>런코딩</p>
-                    </li>
-                    <li>
-                        <span>CPO</span>
-                        <p>김하나</p>
-                    </li>
-                    <li>
-                        <span>Business License</span>
-                        <p>000-000-00000</p>
-                    </li>
-                    <li>
-                        <span>Online Biz</span>
-                        <p>000-000-00000</p>
-                    </li>
-                    <li>
-                        <span>Address</span>
-                        <p>경기도 런코딩 런코딩</p>
-                    </li>
-                </ul>
-            </div>
-            <div class="contact">
-                <span>CONTACT</span>
-                <ul>
-                    <li>
-                        <span>TEL</span>
-                        <p>070-0000-0000</p>
-                    </li>
-                    <li>
-                        <span>E-Mail</span>
-                        <p>master@runcoding.com</p>
-                    </li>
-                    <li>
-                        <span>Kakao ID</span>
-                        <p>런코딩</p>
-                    </li>
-                </ul>
-            </div>
-            <div class="snsArea">
-                <span>SNS</span>
-                <div class="snsBtn">
-                    <a><img src="{% static 'resource/img/common/ico_kakaoTalk.png' %}" alt="kakaotalk"></a>
-                    <a><img src="{% static 'resource/img/common/ico_instagram.png' %}" alt="instagram"></a>
-                    <a><img src="{% static 'resource/img/common/ico_naverBlog.png' %}" alt="naverblog"></a>
-                    <a><img src="{% static 'resource/img/common/ico_youtube.png' %}" alt="youtube"></a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="link_area">
-        <div class="linkWrap">
-            <a href="#modal01">Privacy Policy</a>
-            <a href="#modal02">Terms &amp; Conditions</a>
-        </div>
-    </div>
-</footer>
-
-
-<!-- privacy modal -->
-<div data-ml-modal id="modal01">
-    <a href="#!" class="modal-overlay"></a>
-    <div class="modal-dialog modal-dialog-lg">
-        <a href="#!" class="modal-close">&times;</a>
-        <h3>개인정보취급방침</h3>
-        <div class="modal-content">
-            <div class="terms_area">
-
-            </div>
-        </div>
-    </div>
-</div>
-
-<div data-ml-modal id="modal02">
-    <a href="#!" class="modal-overlay"></a>
-    <div class="modal-dialog modal-dialog-lg">
-        <a href="#!" class="modal-close">&times;</a>
-        <h3>이용약관</h3>
-        <div class="modal-content">
-            <div class="terms_area">
-
-            </div>
-        </div>
-    </div>
-</div>
-
-
-<div data-ml-modal id="modal02">
-    <a href="#!" class="modal-overlay"></a>
-    <div class="modal-dialog modal-dialog-lg">
-        <a href="#!" class="modal-close">&times;</a>
-        <h3>이용약관</h3>
-        <div class="modal-content">
-            <div class="terms_area">
-
-            </div>
-        </div>
-    </div>
-</div>
-
+    {% include "common/banner_bottom.html" %}
+    {% include "common/footer.html" %}
 </div>
 
     <!--  address script -->
