register id 중복체크

--- a/main/templates/login/register.html
+++ b/main/templates/login/register.html
@@ -173,13 +173,13 @@
                 return false;
             }
 
-            var remote_result = document.getElementById("result").value;
-            alert(remote_result);
-            if(remote_result == "" || remote_result.length > 2)
-            {
-                alert("아이디 중복체크 해주세요.");
-                return false;
-            }
+<!--            var remote_result = document.getElementById("result").value;-->
+<!--            alert(remote_result);-->
+<!--            if(remote_result == "" || remote_result.length > 2)-->
+<!--            {-->
+<!--                alert("아이디 중복체크 해주세요.");-->
+<!--                return false;-->
+<!--            }-->
 
             if(!id_pass_patten.test(id.value))
             {
