모바일 사이즈

--- a/main/templates/common/header.html
+++ b/main/templates/common/header.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="Keywords" content="runcoding">
     <meta http-equiv="Copyright" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
     <meta name="robots" content="index,follow">
     <meta name="format-detection" content="telephone=no">
 
@@ -29,15 +29,16 @@
     <link rel="stylesheet" type="text/css" href="{% static 'resource/css/reset.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'resource/css/common.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'resource/css/layout.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/main.css' %}" >
 <!--    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/order.css' %}">-->
 <!--     <link rel="stylesheet" type="text/css" href="{% static 'resource/css/login.css' %}">-->
 
-    <script src="{% static 'resource/js/jquery-3.4.1.min.js' %}"></script>
-    <script src="{% static 'resource/js/modernizr-3.7.1.min.js1' %}"></script>
+    <script src="{% static 'resource/js/vendor/jquery-3.4.1.min.js' %}"></script>
+    <script src="{% static 'resource/js/vendor/modernizr-3.7.1.min.js' %}"></script>
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="{% static 'resource/js/jquery-migrate-3.0.0.js' %}"></script>
-    <script src="{% static 'resource/js/common.js?ver=20200730001' %}"></script>
-    <script src="{% static 'resource/js/wrest.js?ver=20200730001' %}"></script>
+    <script src="{% static 'resource/js/common.js' %}"></script>
+    <script src="{% static 'resource/js/wrest.js' %}"></script>
 
 </head>
 
