--- a/main/templates/common/head.html
+++ b/main/templates/common/head.html
@@ -29,15 +29,14 @@
     <link rel="stylesheet" type="text/css" href="{% static 'resource/css/reset.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'resource/css/common.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'resource/css/layout.css' %}">
-<!--    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/order.css' %}">-->
-<!--     <link rel="stylesheet" type="text/css" href="{% static 'resource/css/login.css' %}">-->
+    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/main.css' %}">
 
-    <script src="{% static 'resource/js/jquery-3.4.1.min.js' %}"></script>
-    <script src="{% static 'resource/js/modernizr-3.7.1.min.js1' %}"></script>
+    <script src="{% static 'resource/js/vendor/jquery-3.4.1.min.js' %}"></script>
+    <script src="{% static 'resource/js/vendor/modernizr-3.7.1.min.js' %}"></script>
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="{% static 'resource/js/jquery-migrate-3.0.0.js' %}"></script>
-    <script src="{% static 'resource/js/common.js?ver=20200730001' %}"></script>
-    <script src="{% static 'resource/js/wrest.js?ver=20200730001' %}"></script>
+    <script src="{% static 'resource/js/common.js' %}"></script>
+    <script src="{% static 'resource/js/wrest.js' %}"></script>
 
 </head>
 
