--- a/main/templates/common/header.html
+++ b/main/templates/common/header.html
@@ -1,48 +1,5 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
 {% load static %}
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>머릿속 생각을 쉽게,뚝딱 런코딩</title>
-    <meta name="description" content="">
-    <meta name="Keywords" content="runcoding">
-    <meta http-equiv="Copyright" content="">
-<!--    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
-    <meta name="robots" content="index,follow">
-    <meta name="format-detection" content="telephone=no">
-
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="runcoding">
-    <meta property="og:description" content="runcoding">
-    <meta property="og:image" content="{% static 'resource/img/common/share_img.jpg' %}">
-
-    <!-- favicon -->
-    <link rel="shortcut icon" href="{% static 'resource/img/common/favicon.ico' %}" type="image/x-icon">
-    <link rel="icon" href="{% static 'resource/img/common/favicon.ico' %}" type="image/x-icon">
-
-    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/font-awesome.min.css' %}">
-
-    <!-- slick css -->
-    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/slick.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/slick-theme.css' %}">
-
-    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/reset.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/common.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/layout.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/main.css' %}" >
-<!--    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/order.css' %}">-->
-<!--     <link rel="stylesheet" type="text/css" href="{% static 'resource/css/login.css' %}">-->
-
-    <script src="{% static 'resource/js/vendor/jquery-3.4.1.min.js' %}"></script>
-    <script src="{% static 'resource/js/vendor/modernizr-3.7.1.min.js' %}"></script>
-    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script src="{% static 'resource/js/jquery-migrate-3.0.0.js' %}"></script>
-    <script src="{% static 'resource/js/common.js' %}"></script>
-    <script src="{% static 'resource/js/wrest.js' %}"></script>
-
-</head>
-
-<body>
+{% include "common/head.html" %}
 <header>
     <script>
     // F12 버튼 방지
