template file add

--- a/main/templates/common/head.html
+++ b/main/templates/common/head.html
@@ -506,4 +506,4 @@ table {border-spacing:0; border-collapse:collapse; table-layout:fixed;}
 
 </head>
 
-<body>
+<body oncontextmenu='return false' onselectstart='return false' ondragstart='return false'>
