--- a/main/templates/common/header.html
+++ b/main/templates/common/header.html
@@ -34,6 +34,7 @@
             return false;
         }
     }
+
     </script>
 
     <div class="header_wrap">
@@ -47,11 +48,11 @@
                 <a href="/class/">코딩키트</a>
             </li>
             <li>
-                <a href="{% static 'lounge/coding_lounge.html' %}">코딩라운지</a>
+                <a href="/lounge/">코딩라운지</a>
             </li>
 
             <li>
-                <a href="{% static 'comunity/coding_comunity.html' %}">커뮤니티</a>
+                <a href="/comunity/">커뮤니티</a>
             </li>
             <li>
                 <a href="/myclass_list/">나의 강의실</a>
