--- a/main/templates/class/class_view_arduino.html
+++ b/main/templates/class/class_view_arduino.html
@@ -182,6 +182,7 @@
                         <a href="#" class="btn cart" onClick="javascript:goOrder();">장바구니</a>
                         <a class="btn buy" href="#">바로구매</a>
                     </div>
+                    <input type="hidden" name="message" value="{{message}}" readonly>
                 </div>
             </div>
         </div>
@@ -240,6 +241,15 @@
              }
          }
 
+          $(document).ready(function() {
+          var msg = $("input[type=hidden][name=message]").val();
+          alert(msg);
+            if (msg == 1)
+            {
+                alert("장바구니에 담겼습니다.")
+            }
+
+         });
     </script>
 
 </body>
