--- a/main/templates/main/index_runcoding.html
+++ b/main/templates/main/index_runcoding.html
@@ -1,8 +1,10 @@
 
-{% load static %}
-{% include "common/header.html" %}
 
-<div class="wrap">    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/main.css' %}" >
+{% include "common/header.html" %}
+{% load static %}
+
+
+<div class="wrap">
 
     <!-- main visual -->
     <section class="main_visual">
